--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="application-name" content="Pastaboss: A Recipe For Disaster" />
-    <meta name="apple-mobile-web-app-title" content="Pastaboss: A Recipe For Disaster" />
+    <meta name="application-name" content="sandbox3d" />
+    <meta name="apple-mobile-web-app-title" content="sandbox3d" />
 
     <meta name="msapplication-starturl" content="./" />
     <meta property="og:image" content="img/logo.png" />
@@ -73,4 +73,4 @@
     <!-- <script src="/socket.io/socket.io.js"></script> -->
 
 </html>
-<script type="text/javascript" src="vendors.e70b97068e22cbf2739f.bundle.js"></script><script type="text/javascript" src="main.a8f8a83896825781df31.bundle.js"></script>
+<script type="text/javascript" src="vendors.e70b97068e22cbf2739f.bundle.js"></script><script type="text/javascript" src="main.d29ed562b55462e3d30f.bundle.js"></script>
